connection between server and client

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,12 @@
           </nav>
     </header>
     <div class="container-md py-4">
-        <div class="search_box">
-          <input class ="search_field"type="text" id="package_id" class="search" placeholder="Package Id">
-          <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
-        </div>
+        <form action="track" method="post">
+          <div class="search_box">
+            <input class="search_field" type="text" id="package_id" name="package_id" class="search" placeholder="Package Id">
+            <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
+          </div>
+        </form>
     </div>
 
 
